--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>R6 Operator & Loadout Randomizer</title>
+<title>R6 Operator Randomizer</title>
 <style>
 body { font-family: Arial, sans-serif; background: #111; color: #fff; margin: 0; padding: 20px; }
 button { background: #ffcc00; border: none; padding: 10px 20px; margin: 5px; font-weight: bold; cursor: pointer; border-radius: 5px; }
@@ -13,7 +13,7 @@ label { display: flex; align-items: center; gap: 5px; font-size: 14px; backgroun
 </style>
 </head>
 <body>
-<h1>R6 Operator & Loadout Randomizer</h1>
+<h1>R6 Operator Randomizer</h1>
 <div>
   <button id="randomize">Randomize</button>
 </div>
@@ -33,29 +33,25 @@ label { display: flex; align-items: center; gap: 5px; font-size: 14px; backgroun
 <script>
 const operators = {
   attackers: [
-    {name: 'Ash', primaries:['R4-C','G36C'], secondaries:['M45 MEUSOC'], gadgets:['Breaching Charge','Stun Grenade']},
-    {name: 'Thermite', primaries:['556XI','M1014'], secondaries:['5.7 USG'], gadgets:['Smoke Grenade','Claymore']},
-    {name: 'Sledge', primaries:['L85A2','M590A1'], secondaries:['P226 MK 25'], gadgets:['Frag Grenade','Stun Grenade']}
+    'Ace','Amaru','Ash','Blackbeard','Blitz','Buck','Capitão','Dokkaebi','Finka','Flores','Fuze','Glaz','Gridlock','Hibana','Iana','IQ','Jackal','Kali','Lion','Maverick','Montagne','Nokk','Osa','Ram','Sens','Sledge','Thatcher','Thermite','Twitch','Ying','Zero','Zofia'
   ],
   defenders: [
-    {name: 'Jäger', primaries:['416-C','M870'], secondaries:['P12'], gadgets:['Barbed Wire','Bulletproof Camera']},
-    {name: 'Bandit', primaries:['MP7','M870'], secondaries:['P12'], gadgets:['Nitro Cell','Barbed Wire']},
-    {name: 'Mira', primaries:['Vector .45','ITA12L'], secondaries:['USP40'], gadgets:['Barbed Wire','Nitro Cell']}
+    'Alibi','Aruni','Azami','Bandit','Castle','Caveira','Clash','Doc','Echo','Ela','Fenrir','Frost','Goyo','Jäger','Kaid','Kapkan','Lesion','Maestro','Melusi','Mira','Mozzie','Mute','Oryx','Pulse','Rook','Smoke','Solis','Tachanka','Thorn','Thunderbird','Tubarao','Valkyrie','Vigil','Wamai','Warden'
   ]
 };
 
 function renderOperatorList() {
   ['attackers','defenders'].forEach(side => {
     const container = document.getElementById(side+'List');
-    operators[side].forEach(op => {
-      const id = side + '-' + op.name;
+    operators[side].forEach(name => {
+      const id = side + '-' + name;
       const label = document.createElement('label');
       const checkbox = document.createElement('input');
       checkbox.type = 'checkbox';
       checkbox.id = id;
       checkbox.checked = true;
       label.appendChild(checkbox);
-      label.appendChild(document.createTextNode(op.name));
+      label.appendChild(document.createTextNode(name));
       container.appendChild(label);
     });
   });
@@ -64,16 +60,16 @@ function renderOperatorList() {
 function pickRandom(arr) { return arr[Math.floor(Math.random() * arr.length)]; }
 
 function randomize() {
-  const selectedAttackers = operators.attackers.filter(op => document.getElementById('attackers-' + op.name)?.checked);
-  const selectedDefenders = operators.defenders.filter(op => document.getElementById('defenders-' + op.name)?.checked);
+  const selectedAttackers = operators.attackers.filter(name => document.getElementById('attackers-' + name)?.checked);
+  const selectedDefenders = operators.defenders.filter(name => document.getElementById('defenders-' + name)?.checked);
   if (!selectedAttackers.length || !selectedDefenders.length) {
     alert('Please select at least one operator from each side.');
     return;
   }
   const att = pickRandom(selectedAttackers);
   const def = pickRandom(selectedDefenders);
-  document.getElementById('attackerResult').textContent = `Attacker: ${att.name} | Primary: ${pickRandom(att.primaries)}, Secondary: ${pickRandom(att.secondaries)}, Gadget: ${pickRandom(att.gadgets)}`;
-  document.getElementById('defenderResult').textContent = `Defender: ${def.name} | Primary: ${pickRandom(def.primaries)}, Secondary: ${pickRandom(def.secondaries)}, Gadget: ${pickRandom(def.gadgets)}`;
+  document.getElementById('attackerResult').textContent = `Attacker: ${att}`;
+  document.getElementById('defenderResult').textContent = `Defender: ${def}`;
 }
 
 document.getElementById('randomize').addEventListener('click', randomize);
